feat: use mutation and invalidate query

--- a/biome.json
+++ b/biome.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["@arthurrios/biome-config/react"]
+  "extends": ["@arthurrios/biome-config/react"],
+  "linter": {
+    "rules": {
+      "a11y": {
+        "useButtonType": "off"
+      }
+    }
+  }
 }
